# soil_model_cpp

./: CMakeLists.txt  LICENSE  README.md  Sm_geometry.cpp  Sm_geometry.h  eg.cpp  eg.h  main.cpp  matrix_manipulate.cpp  matrix_manipulate.h  soil_model.cpp  soil_model.h  yes  yes.pub
